After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756208 - pad: memory leak when pushing events to an EOS pad
pad: memory leak when pushing events to an EOS pad
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-07 21:55 UTC by Florin Apostol
Modified: 2015-10-08 14:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (622 bytes, patch)
2015-10-07 21:59 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-10-07 21:55:30 UTC
when pushing an event to a pad that is EOS, the event should be unreffed. But with the changes from ce7ce2d86697cf8373b02fae8a93892c154bc227 it no longer is and the event leaks.
Comment 1 Florin Apostol 2015-10-07 21:59:22 UTC
Created attachment 312858 [details] [review]
proposed patch
Comment 2 Sebastian Dröge (slomo) 2015-10-07 22:09:48 UTC
commit 224da699a9d8e6b75d90893ee41b825cd6786357
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Wed Oct 7 22:55:44 2015 +0100

    pad: fix memory leak when sending events to an EOS pad
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756208
Comment 3 A Ashley 2015-10-08 07:33:56 UTC
As this bug existed in 1.6, shouldn't the fix target be a 1.6.x release?
Comment 4 Sebastian Dröge (slomo) 2015-10-08 14:09:49 UTC
This leak was introduced as part of the GstTracer commits, no? Shouldn't be in 1.6 then